Feature/account settings (#7)
* use email instead of login

* use _id in tokens and add update user data route

* update swagger.json
