# src/controllers/authController.ts
@@ -1,4 +1,4 @@
-import { NextFunction, Request, Response } from "express";
+import { Request, Response } from "express";
 import logging from "../config/logging";
 import bcryptjs from "bcryptjs";
 import jwt from "jsonwebtoken";
@@ -16,19 +16,8 @@ import cache from "config/cache";
 type Variant = "users" | "cms";
 export type Role = "admin" | "user";
 
-const register = (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-  variant: Variant
-) => {
-  const { login, password, repeatedPassword } = req.body;
-
-  if (!login) {
-    return res.status(422).json({
-      message: "login was not provided",
-    });
-  }
+const register = async (req: Request, res: Response, variant: Variant) => {
+  const { password, repeatedPassword, email, name, surname } = req.body;
 
   if (!password) {
     return res.status(422).json({
@@ -48,13 +37,32 @@ const register = (
     });
   }
 
+  if (!email) {
+    return res.status(422).json({
+      message: "email was not provided",
+    });
+  }
+  if (!name) {
+    return res.status(422).json({
+      message: "name was not provided",
+    });
+  }
+  if (!surname) {
+    return res.status(422).json({
+      message: "surname was not provided",
+    });
+  }
+
   if (
-    typeof login !== "string" ||
+    typeof email !== "string" ||
+    typeof name !== "string" ||
+    typeof surname !== "string" ||
     typeof password !== "string" ||
     typeof repeatedPassword !== "string"
   ) {
     return res.status(422).json({
-      message: "login, password and repeatedPassword should be of type string",
+      message:
+        "email, password, repeatedPassword, name, surname and email should be of type string",
     });
   }
 
@@ -64,22 +72,27 @@ const register = (
     });
   }
 
-  UserModel.find({ login })
+  if (!email.includes("@") || !email.includes(".")) {
+    return res.status(422).json({
+      message: "wrong email format",
+    });
+  }
+
+  UserModel.find()
+    .where("data.email")
+    .in([email])
+    .where("isAdmin")
+    .in([variant === "cms"])
     .exec()
-    .then((users) => {
-      if (
-        users.filter((user) => {
-          return variant === "cms" ? user.isAdmin : !user.isAdmin;
-        }).length
-      ) {
+    .then((results) => {
+      if (results.length && results[0].data.email === email) {
         return res.status(422).json({
           message:
             variant === "cms"
-              ? "Admin with that login already exists"
-              : "User with that login already exists",
+              ? "Admin with that email already exists"
+              : "User with that email already exists",
         });
       }
-
       bcryptjs.hash(password, 10, (hashError, hashedPassword) => {
         if (hashError) {
           return res.status(500).json({
@@ -89,9 +102,13 @@ const register = (
         }
 
         const newUser = new UserModel({
-          login,
           password: hashedPassword,
           ...(variant === "cms" && { isAdmin: true }),
+          data: {
+            email,
+            name,
+            surname,
+          },
         });
 
         return newUser
@@ -101,7 +118,7 @@ const register = (
               "userController",
               `New ${
                 variant === "cms" ? "admin" : "user"
-              } with login ${login} was added to the database`
+              } with email ${email} was added to the database`
             );
             return res.status(201).json({
               message: "Successfuly created user",
@@ -114,41 +131,46 @@ const register = (
             });
           });
       });
+    })
+    .catch((error) => {
+      return res.status(500).json({
+        message: error.message,
+        error,
+      });
     });
 };
 
-export const login = async (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-  variant: Variant
-) => {
-  let { login, password } = req.body;
+export const login = async (req: Request, res: Response, variant: Variant) => {
+  let { email, password } = req.body;
 
-  if (!login) {
+  if (!email) {
     return res.status(422).json({
-      message: "login was not provided",
+      message: "email was not provided",
     });
   }
 
   if (!password) {
     return res.status(422).json({
-      message: "login was not provided",
+      message: "password was not provided",
     });
   }
 
-  if (typeof login !== "string" || typeof password !== "string") {
+  if (typeof email !== "string" || typeof password !== "string") {
     return res.status(422).json({
-      message: "login and password should be of type string",
+      message: "email and password should be of type string",
     });
   }
 
-  UserModel.find({ login, ...(variant === "cms" && { isAdmin: true }) })
+  UserModel.find()
+    .where("data.email")
+    .in([email])
+    .where("isAdmin")
+    .in([variant === "cms"])
     .exec()
     .then((users) => {
       if (!users.length) {
         return res.status(401).json({
-          message: "Account with that login and password does not exist",
+          message: "Account with that email and password does not exist",
         });
       }
 
@@ -164,7 +186,7 @@ export const login = async (
           try {
             const accessToken = jwt.sign(
               {
-                login: user.login,
+                _id: user._id,
                 role: variant === "cms" ? "admin" : "user",
               },
               ACCESS_TOKEN_SECRET,
@@ -175,7 +197,7 @@ export const login = async (
 
             const refreshToken = jwt.sign(
               {
-                login: user.login,
+                _id: user._id,
               },
               REFRESH_TOKEN_SECRET,
               {
@@ -185,7 +207,7 @@ export const login = async (
 
             const newRefreshTokenInDB = new RefreshTokenModel({
               value: refreshToken,
-              forAccount: user.login,
+              forAccount: user.data.email,
               isAccountAdmin: variant === "cms",
             });
 
@@ -196,7 +218,7 @@ export const login = async (
             });
           } catch (error) {
             logging.error(
-              "Login",
+              "login",
               "Could not sign tokens when trying to login"
             );
             return res.status(401).json({
@@ -206,7 +228,7 @@ export const login = async (
           }
         } else {
           return res.status(401).json({
-            message: "Account with that login and password does not exist",
+            message: "Account with that email and password does not exist",
             error,
           });
         }
@@ -220,12 +242,7 @@ export const login = async (
     });
 };
 
-const refreshAccessToken = (
-  req: Request,
-  res: Response,
-  next: NextFunction,
-  variant: Variant
-) => {
+const refreshAccessToken = (req: Request, res: Response, variant: Variant) => {
   const { refreshToken } = req.body;
 
   if (!refreshToken) {
@@ -261,7 +278,7 @@ const refreshAccessToken = (
 
         jwt.sign(
           {
-            login: data && data.login,
+            _id: data && data._id,
             role: variant === "cms" ? "admin" : "user",
           },
           ACCESS_TOKEN_SECRET,
@@ -291,7 +308,7 @@ const refreshAccessToken = (
     });
 };
 
-const logout = (req: Request, res: Response, next: NextFunction) => {
+const logout = (req: Request, res: Response) => {
   const { refreshToken, accessToken } = req.body;
 
   if (!refreshToken || !accessToken) {
@@ -333,7 +350,7 @@ const logout = (req: Request, res: Response, next: NextFunction) => {
         accessToken,
         {
           accessToken,
-          ...(decoded && { login: decoded.login, role: decoded.role }),
+          ...(decoded && { _id: decoded._id, role: decoded.role }),
         },
         expireBlacklistedTokenAt
       );
