# swagger.json
@@ -61,15 +61,13 @@
       "RequestRegisterCredentials": {
         "type": "object",
         "required": [
-          "login",
           "password",
-          "repeatedPassword"
+          "repeatedPassword",
+          "email",
+          "name",
+          "surname"
         ],
         "properties": {
-          "login": {
-            "type": "string",
-            "description": "login used to register"
-          },
           "password": {
             "type": "string",
             "description": "password"
@@ -77,24 +75,38 @@
           "repeatedPassword": {
             "type": "string",
             "description": "the same password passed twice"
+          },
+          "email": {
+            "type": "string",
+            "description": "email"
+          },
+          "name": {
+            "type": "string",
+            "description": "your name"
+          },
+          "surname": {
+            "type": "string",
+            "description": "your surname"
           }
         },
         "example": {
-          "login": "myLogin",
-          "password": "Pa$sWorD",
-          "repeatedPassword": "Pa$sWorD"
+          "password": "admin123",
+          "repeatedPassword": "admin123",
+          "email": "admin@asd.pl",
+          "name": "John",
+          "surname": "Doe"
         }
       },
       "RequestLoginCredentials": {
         "type": "object",
         "required": [
-          "login",
+          "email",
           "password"
         ],
         "properties": {
-          "login": {
+          "email": {
             "type": "string",
-            "description": "Login that is used to log in"
+            "description": "email that is used to log in"
           },
           "password": {
             "type": "string",
@@ -102,8 +114,8 @@
           }
         },
         "example": {
-          "login": "myLogin",
-          "password": "Pa$sWorD"
+          "email": "admin@asd.pl",
+          "password": "admin123"
         }
       },
       "RequestRefreshTokenCredentials": {
@@ -125,7 +137,8 @@
         "type": "object",
         "required": [
           "name",
-          "surname"
+          "surname",
+          "email"
         ],
         "properties": {
           "name": {
@@ -135,11 +148,43 @@
           "surname": {
             "type": "string",
             "description": "user surname"
+          },
+          "email": {
+            "type": "string",
+            "description": "email"
           }
         },
         "example": {
           "name": "John",
-          "surname": "Doe"
+          "surname": "Doe",
+          "email": "admin@asd.pl"
+        }
+      },
+      "RequestUpdateUser": {
+        "type": "object",
+        "required": [
+          "name",
+          "surname",
+          "email"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "user name"
+          },
+          "surname": {
+            "type": "string",
+            "description": "user surname"
+          },
+          "email": {
+            "type": "string",
+            "description": "user email"
+          }
+        },
+        "example": {
+          "name": "John",
+          "surname": "Doe",
+          "email": "admin@asd.pl"
         }
       }
     }
